# backend

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
app/: config.py  constants.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  authentication.py  aws.py  test.py
app/integrations/aws/: test.py
app/integrations/database/: client.py
app/integrations/database/models/: User.py
app/services/auth/: jwt_validation.py
app/utils/: logger.py  middleware.py  response.py
dev/database/: README.md  docker-compose.yml
dev/database/scripts/: init.sql
docs/: aws-setup.md  resources.md
scripts/: delete-workflows.sh  github-secrets.setup.sh
