[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aryan Khurana <aryankhurana1511@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.7"}
authlib = "^1.4.0"
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
