[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aryan Khurana <aryankhurana1511@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.7"}
authlib = "^1.4.0"
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"
boto3 = "^1.36.8"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
